[package]
name = "realsense2_camera_msgs"
version = "4.57.7"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

# ROS Dependencies
unique_identifier_msgs = "*"
sensor_msgs = "*"
geometry_msgs = "*"
std_msgs = "*"
action_msgs = "*"
builtin_interfaces = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'unique_identifier_msgs/serde', 'sensor_msgs/serde', 'geometry_msgs/serde', 'std_msgs/serde', 'action_msgs/serde', 'builtin_interfaces/serde']

[package.metadata.ros-env]
include = true
